[package]
name = "carillon"
version = "0.1.0"
authors = ["TAKAMI Torao <koiroha@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
log4rs = "0.13"
thiserror = "1"
toml = "0.5"
serde = { version = "1", features = ["derive"] }
clap = "2"
chrono = "0.4"
#daemonize = "0.4"
num = "0.3"
rand = "0.7"
ed25519-dalek = "1"
